Fix #106139: Curvemapping clipping range variable error

Clipping should use `clipr`instead of `curr`.

`clipr` is for value clipping while `curr` is for curve view clipping,
misuse of these two can lead to output value being clipped by
viewing range. Now fixed.

Pull Request: https://projects.blender.org/blender/blender/pulls/106164